--- a/RevisaoOO/.classpath
+++ b/RevisaoOO/.classpath
@@ -6,5 +6,8 @@
 	<classpathentry kind="lib" path="C:/Users/João V. Scanagatta/Desktop/prog aplicada 2/mysql-connector-java-5.1.43/mysql-connector-java-5.1.43-bin.jar"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="lib/jasperreports-6.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/jasperreports-fonts-6.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/jasperreports-javaflow-6.4.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
