--- a/RevisaoOO/.classpath
+++ b/RevisaoOO/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/João V. Scanagatta/Desktop/prog aplicada 2/mysql-connector-java-5.1.43/mysql-connector-java-5.1.43-bin.jar"/>
@@ -9,5 +10,10 @@
 	<classpathentry kind="lib" path="lib/jasperreports-6.4.1.jar"/>
 	<classpathentry kind="lib" path="lib/jasperreports-fonts-6.4.1.jar"/>
 	<classpathentry kind="lib" path="lib/jasperreports-javaflow-6.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-beanutils-1.8.3.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-digester-2.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/itext-2.1.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
